syntax = "proto3";

package file;

option go_package = "/gen";

service FileService {
    rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
    rpc DownloadFile(DonwloadFileRequest) returns (stream DownloadFileResponse);
}

message UploadFileRequest {
    bytes chunk = 1;
    string filename = 2;
}

message UploadFileResponse {
    string message = 1;
}

message DonwloadFileRequest {
    string filename = 1;
}

message DownloadFileResponse {
    bytes chunk = 1;
}